# gemini-autoclean

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gemini_autoclean/: cli.py  config.py  installer.py  paths.py  service.py  watcher.py
